--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: sse_channel
 description: StreamChannel wrappers for Server Sent Events.
-version: 0.0.3
+version: 0.0.3+1
 repository: https://www.github.com/jamiewest/sse_channel
 
 environment:
-  sdk: '>=2.18.4 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   async: ^2.10.0
-  http: ^0.13.5
+  http: ^1.1.0
   pool: ^1.5.1
   sse: ^4.1.1
   stream_channel: ^2.1.1
@@ -17,5 +17,3 @@ dependencies:
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
-
-
